--- a/README
+++ b/README
@@ -2,6 +2,6 @@ TO INSTALL
 
 cd ~/Library/"Application Support"/TextMate/Bundles/
 
-git clone git@github.com:jackbb/CSSVendorPrefixes-JackBB.tmbundle.git "CSSVendorPrefixes-JackBB.tmbundle"
+git clone git://github.com/jackbb/CSSVendorPrefixes-JackBB.tmbundle.git "CSSVendorPrefixes-JackBB.tmbundle"
 
 Remember to reload your bundles in TextMate when done!
